--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,24 +1,12 @@
 ---
 play_number: 1
-title: Înțelege nevoile oamenilor
+title: I. SCOP
 ---
 
-În dezvoltarea produselor digitale trebuie să ținem cont atât de nevoile persoanelor care urmează să le folosească, cât și de felul în care produsele urmează să fie folosite. De prea multe ori produsele digitale sunt livrate în baza unor specificații în care nu s-a ținut cont de nevoile celor care urmează să le folosească. Indiferent că e vorba de cetățeni sau angajați ai instituțiilor publice, oamenii ar trebui să fie elementul central în informarea deciziilor tehnice, de design și de funcționalitate ale unor produse, și nu constrângerile structurilor administrative. Este vital ca produsele digitale să fie testate continuu, cu oameni reali, pentru a ne asigura că respectăm în permanență cerințele cetățenilor și ale partenerilor instituționali.
+Suntem o comunitate reunită din medii profesionale diferite în care  diversitatea și  deschiderea sunt apreciate înainte de orice. Obiectivul principal al comunității CivicTech România este să fie deschisă unui număr cât mai mare de persoane din cele mai variate și diverse medii posibile. Ca atare, ne angajăm să oferim un mediu prietenos, sigur și primitor pentru toți cei reuniți sub această comunitate, indiferent de sex, orientare sexuală, abilități, etnie, statut socio-economic sau religie (ori lipsa acesteia).
 
-### Recomandări
-1. Înainte de a dezvolta orice, petrece timp cu utilizatori curenți, sau potențiali utilizatori ai produsului.
-2. Folosește o suită de metode de cercetare, atât cantitative cât și calitative, pentru a determina cerințele funcționale ale produsului (interviuri contextuale, focus-grupuri, chestionare, usability testing, card sorting). 
-3. Testează prototipul interactiv cu utilizatori reali, parte din publicul țintă al produsului dezvoltat
-4. Documentează concluziile cercetării (preferințe, nevoi, reacții, etc.)
-5. Distribuie concluziile atât cu partenerii instituționali cât și cu colegii din CivicTech România.
-6. Redactează cerințele funcționale în jurul nevoilor sau proceselor pe care utilizatorul trebuie să le îndeplinească (user stories)
-7. Testează produsul în timpul dezvoltării, pentru a te asigura că execuția este corectă - adoptă o metodologie agilă (iterativă)
+Acest Cod de conduită conturează așteptările noastre pentru toți cei care fac parte din comunitatea noastră, precum și consecințele pentru un comportament inacceptabil. 
 
-### Întrebări Cheie
-- Ce probleme principale rezolva produsul? Dar cele secundare? Care e scopul pe termen mediu/lung?
-- Cine sunt cei cărora li se adresează produsul (audiența țintă)? / Care e profilul audienței?
-- Ce metode de cercetare calitativă/cantitativă au fost folosite?
-- Care au fost concluziile cheie ale cercetării?
-- Cum au fost documentate concluziile? 
-- Cât de des testezi cu persoane reale?
+Invităm astfel pe toți cei care alcătuiesc comunitatea CivicTech România să ne ajute să asigurăm experiențe sigure și pozitive pentru toată lumea.
+
 
