--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,19 +1,14 @@
 ---
 play_number: 3
-title: Fiecare proiect trebuie să aibă un coordonator
+title: 3. COMPORTAMENTUL AȘTEPTAT
 ---
+Îi încurajăm pe toți membrii acestei comunități să se poarte în mod excepțional  unul cu celălalt. Următoarele comportamente sunt așteptate și solicitate de la toți membrii comunității:
 
-Fiecare proiect asumat trebuie să aibă un coordonator principal dintre membrii de baza ai CivicTech România.
-Coordonatorul are autoritatea și responsabilitatea de a delega sarcini de lucru, de a lua decizii de business sau tehnice, iar în final să fie persoana responsabilă public pentru succesul sau eșecul proiectului. Măsura vitală a succesului unui proiect este capacitatea în care produsul face față cerințelor utilizatorilor, atât cetățeni cât și parteneri instituționali. Pentru asta, coordonatorul trebuie să țină cont de părerile argumentate și de experiența colegilor din echipa de proiect, să se bucure de sprijin și să beneficieze de libertatea / autonomia de a lua decizii informate. 
+- Implicați-vă într-un mod autentic și activ. Astfel contribuiți la valoarea, autenticitatea și longevitatea acestei comunități.
+- Exprimați-vă deschis și asumat opiniile. 
+- Acordați atenție și respect în discursul și acțiunile personale. 
+- Încercați colaborarea înainte de conflict :) 
+- Evitați comportamente, exprimări și discursuri înjositoare, discriminatorii sau care pot hărțui. Toți participanții trebuie să se simtă în permanență în siguranță, fără să se teamă de nici o formă de atac, abuz sau hărțuire. 
+- Fiți atenți la context și la ceilalți participanți. Alertați coordonatorii comunității dacă observați o persoană agresivă, o situație delicată sau încălcări ale acestui Cod de conduită, chiar dacă acestea par a fi inconsecvente.
+- Amintiți-vă că mesajele comunității pot fi împărtășite cu publicul larg; Vă rugăm să fiți respectuoși față de susținătorii, partenerii, sponsorii și invitații acestei comunități.
 
-### Recomandări
-1. Proiectul are un coordonator oficial CivicTech România (un membru din [echipa de bază](https://civictech.ro/cine-suntem#povestea))
-2. Fiecare decident este de acord că persoana aleasă drept coordonator are autoritatea de a distribui sarcini de lucru și a lua decizii în ceea ce privește funcționalitatea și detaliile de implementare
-3. Coordonatorul are abilitățile de management și tehnice necesare pentru a lua decizii informate
-4. Coordonatorul are un plan care include atât estimări de buget/timp, cât și un plan pentru sustenabilitate financiară
-5. Coordonatorul are o relație bună cu partenerul instituțional(beneficiarul) și cu restul echipei
-
-### Întrebări Cheie
-- Cine e coordonatorul proiectului?
-- Coordonatorul are suficient sprijin și autonomie pentru a duce la bun sfârșit proiectul?
-- Ce presupune îndepărtarea sau adăugarea de noi funcționalități pentru coordonator? 
