--- a/_plays/04.md
+++ b/_plays/04.md
@@ -1,15 +1,20 @@
 ---
 play_number: 4
-title: Echipa de proiect își pune la comun experiența
+title: 4. COMPORTAMENT INACCEPTABIL
 ---
+Pentru a încuraja toleranța, respectul și ospitalitatea în comunitatea noastră, ne asumăm angajamentul de a nu tolera discursuri sau acțiuni discriminatorii sau ofensatoare, inclusiv în ceea ce privește subiecte precum sexualitatea, rasa, naționalitatea, religia sau profesia. 
 
-Produsele digitale de calitate nu pot fi dezvoltate fără o echipă pe măsură. Ideal, fiecare proiect ar trebui să aibă în componența echipei atât membri cu experiență din mediul privat, cât și membri cu experiență în ceea ce privește serviciile publice. Dacă e necesar, se poate cere ajutor din partea partenerilor instituționali sau privați, sau se poate face un apel în cadrul comunității CivicTech România. Componența echipelor variază în funcție de complexitatea și scopul fiecărui proiect.
+Următoarele comportamente sunt considerate hărțuire și sunt inacceptabile în comunitate:
+- Violență verbală, amenințări cu violență sau alte atitudini violente îndreptate împotriva unei persoane sau a unui grup.
+- Sexism, rasism, homofobie, xenofobie, transfobie, discriminare pe bază de abilități, precum și glume sau limbaj discriminatoriu sau ofensator de altă natură.
+- Postarea sau afișarea de materiale și atitudini explicite de natură violentă sau sexuală.
+- Postarea sau amenințarea cu publicarea informațiilor personale ale altor persoane ("doxing").
+- Insulte, ofense și atacuri la persoană, în special legate de sex, orientare sexuală, rasă, religie sau dizabilitate.
+- Postarea de fotografii, clipuri video sau alte materiale cu conținut necorespunzător.
+- Contact fizic necorespunzător. Ar trebui să aveți întotdeauna consimțământul unei persoane înainte de a o atinge.
+- Atenție nesolicitată cu tentă sexuală. Aici intră comentarii sau glume sexuale, atingere inadecvată și avansuri sexuale nesolicitate.
+- Atitudini ofensatoare, de intimidare, de hărțuire (bullying) sau stalking (urmărire online sau în persoană).
+- Perturbarea susținută a activităților comunității, inclusiv discuții și prezentări.
+- Susținerea sau încurajarea oricărui comportament de mai sus.
 
-### Recomandări
-1. Membrii echipei au experiență în a construi produse scalabile, cu trafic intens, pentru milioane de utilizatori (sau mai mult)
-2. Membrii echipei sunt familiarizați cu procese de dezvoltare precum code review, folosirea unui sistem de versionare a codului sursă, etc.
-3. Membrii echipei sunt familiarizați cu scrierea de unit și integration tests
-4. Membrii echipei au experiență cu tehnici moderne de dezvoltare (DevOps) precum [continuous integration](https://en.wikipedia.org/wiki/Continuous_integration) și [continuous delivery](https://en.wikipedia.org/wiki/Continuous_delivery)
-5. Membrii echipei au cunoștințe în ceea ce privește securitatea cibernetică și metode de evitare a vulnerabilităților
-6. În cazul membrilor juniori, sau cu experiență medie, aceștia au dorința de a asimila noi cunoștințe și de a aplica bunele practici enumerate mai sus
 
