--- a/_plays/05.md
+++ b/_plays/05.md
@@ -1,19 +1,10 @@
 ---
 play_number: 5
-title: Alege un stack de dezvoltare modern
+title: 5. CONSECINȚELE COMPORTAMENTULUI INACCEPTABIL
 ---
+Comportamentul inacceptabil din partea oricărui membru al comunității (inclusiv fondatori, asociați, parteneri, sponsori, invitați și cei cu autoritate decizională) nu va fi tolerat. 
 
-Deciziile de implementare luate pentru dezvoltarea unui proiect trebuie să ajute echipa să lucreze mai eficient și să permită produsului să fie scalat ușor (și ieftin). În alegerea lotului tehnologic (stack-ului) folosit, trebuie evitat pe cât posibil pericolul de [vendor lock-in](https://en.wikipedia.org/wiki/Vendor_lock-in) (sa devii dependent/captiv celui care vinde o soluție specifică) și să reflecte opțiunile alese în mediul privat pentru produse similare. Tehnologiile care întrunesc frecvent toate aceste condiții sunt produse Open Source cu adopție mare, care de multe ori beneficiază de suport din partea unuia sau mai multor parteneri privați. 
+Se așteptă conformare imediată de la orice persoană căreia i-a fost cerut să oprească un comportament considerat inacceptabil. 
 
-### Recomandări
-1. Alege framework-uri (cadre, structuri) și tehnologii care se bucură de sprijin din partea mediului privat, îndeosebi atunci când produsul dezvoltat este unul similar
-2. Asigură-te că nu există condiții speciale/restrictive de implementare pentru tehnologiile alese
-3. Ia în calcul soluții Open Source înaintea celor comerciale
-4. Asigură-te că tehnologiile alese sunt în continuă dezvoltare. Pentru proiecte Open Source, vezi când s-au făcut ultimele commit-uri.
-5. Dacă e posibil, alege tehnologii care se bucură de sprijin din partea cât mai multor dezvoltatori, astfel te asiguri că vei găsi mai ușor contribuitori, dar și support în cadrul comunității
-6. Asigură-te că fiecare proiect are instrucțiuni clare pentru configurarea unui mediu de dezvoltare local, și că nu există prea multă fricțiune pentru începerea lucrului la un proiect
-7. Ține cont de timpul disponibil al fiecăruia dintre membrii echipei și încearcă să adopți tehnologii cu [developer feedback loop](https://xkcd.com/303/) cât mai scurt
+În cazul în care un membru al comunității se comportă în mod inacceptabil, organizatorii comunității pot lua orice acțiune pe care o consideră adecvată pentru soluționarea situației, inclusiv interzicerea temporară sau expulzarea sa permanentă din comunitate fără avertisment. Mai mult, comportamentul defectuos poate duce, în situații extreme, la excluderea din proiectele, activitățile și / sau infrastructura comunității. 
 
-### Întrebări Cheie
-- Ce tehnologii ai folosit și de ce le-ai ales pe acestea?
-- Cât durează până când un membru nou poate începe să scrie cod și să testeze schimările făcute?
