--- a/_plays/08.md
+++ b/_plays/08.md
@@ -1,29 +1,9 @@
 --- 
 play_number: 8
-title: Ia decizii bazate pe date
+title: 8. DOMENIUL DE APLICARE
 ---
+Codul de conduită se aplică în mod egal tuturor participanților, incluzând membri fondatori, asociați, voluntari, parteneri, donatori, sponsori și alți invitați.
 
-Informațiile venite din măsurători automate sau din feedback-ul direct al utilizatorilor nu pot fi subestimate. Atât performanța produselor cât și capacitatea lor de a răspunde cerințelor trebuie monitorizate în timp real, continuu. Indicatorii de performanță cât și feedback-ul direct trebuie analizat periodic pentru a identifica oportunități de îmbunătățire ale produsului și pentru a prioritiza noi funcționalități. De asemenea, fiecare produs are nevoie de un mecanism direct de feedback din partea utilizatorilor.
+Ne așteptăm ca toți participanții din comunitate să respecte acest Cod de conduită în toate locațiile de manifestarea a comunității, atât online cât și în persoană, precum și în toate comunicările individuale directe ce fac referire la activitățile și membrii acestei comunități.
 
-### Recomandări
-1. Monitorizează utilizarea resurselor hardware în timp real (cpu, memory, disk space, etc.)
-2. Monitorizează performanța produsului în timp real (latență, rata de erori, timp de răspuns, etc.)
-3. Creează alerte automate (pe email, dar și prin SMS unde e posibil) bazate pe indicatorii de mai sus
-4. Monitorizează acțiunile utilizatorilor în agregat pentru a determina dacă produsul răspunde nevoilor (ex: există căutări comune care nu returnează rezultate?)
-5. Raportează rezultatele măsurate intern
-6. Raportează rezultatele măsurate extern
-7. Folosește metode de experimentare A/B în producție
-
-### Întrebări Cheie
-- Care sunt indicatorii cheie pentru produsul tău?
-- Cum au evoluat acești indicatori pe durata de viață a produsului?
-- Ce sisteme de monitorizare folosești?
-- Care este timpul de răspuns mediu al produsului? Ce procent de request-uri durează mai mult de 1s/2s/3s/4s și 8s pentru cele mai comune 10 endpoint-uri?
-- Care este volumul de tranzacții pentru cele mai comune 10 endpoint-uri? Care este procentajul de tranzacții începute vs tranzacții finalizate?
-- Care este uptime-ul pe care vrei să-l atingi? 
-- Cum primești alerte când se întâmplă un incident?
-- Cum răspunzi la incidente? Care este procesul de post-mortem?
-- Ce tool-uri folosești pentru monitorizarea acțiunilor în produs?
-- Ce tool-uri folosești pentru experimentare A/B?
-- Cum măsori satisfacția utilizatorilor cu produsul tău? 
-
+Acest cod de conduită și procedurile aferente se aplică, de asemenea, și comportamentului inacceptabil care apare în afara sferei activităților comunității, atunci când un astfel de comportament are potențialul de a afecta negativ siguranța și confortul membrilor comunității.
