--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,11 +1,13 @@
 ---
 play_number: 1
-title: I. Scop
+title: Scop
 ---
 
 Suntem o comunitate reunită din medii profesionale diferite în care  diversitatea și  deschiderea sunt apreciate înainte de orice. 
 
-Obiectivul principal al comunității CivicTech România este să fie deschisă unui număr cât mai mare de persoane din cele mai variate și diverse medii posibile. Ca atare, ne angajăm să oferim un mediu prietenos, sigur și primitor pentru toți cei reuniți sub această comunitate, indiferent de sex, orientare sexuală, abilități, etnie, statut socio-economic sau religie (ori lipsa acesteia).
+Obiectivul principal al comunității CivicTech România este să fie deschisă unui număr cât mai mare de persoane din cele mai variate și diverse medii posibile. 
+
+Ca atare, ne angajăm să oferim un mediu prietenos, sigur și primitor pentru toți cei reuniți sub această comunitate, indiferent de sex, orientare sexuală, abilități, etnie, statut socio-economic sau religie (ori lipsa acesteia).
 
 Acest Cod de conduită conturează așteptările noastre pentru toți cei care fac parte din comunitatea noastră, precum și consecințele pentru un comportament inacceptabil. 
 
