--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,8 +1,10 @@
 ---
 play_number: 2
-title: 2. DESCHIDERE [Cultură / Tehnologie / Comunitate]
+title: Deschidere
 ---
-Comunitățile oglindesc societățile în care există, iar atitudinea deschisă și pozitivă este esențială pentru a contracara numeroasele forme de inegalitate și abuz de putere care există în societate. Comunitatea noastră se bazează pe libertatea de exprimare și deschidere. Ne face plăcere să colaborăm și să lucrăm împreună respectând opinii, aptitudini și interese diferite. 
+Comunitățile oglindesc societățile în care există, iar atitudinea deschisă și pozitivă este esențială pentru a contracara numeroasele forme de inegalitate și abuz de putere care există în societate. 
+
+Comunitatea noastră se bazează pe libertatea de exprimare și deschidere. Ne face plăcere să colaborăm și să lucrăm împreună respectând opinii, aptitudini și interese diferite. 
 
 Prin acest Cod de Conduită ne dorim să încurajăm participanții să înțeleagă și să conștientizeze relațiile dintre acțiunile noastre ale tuturor și efectele lor directe reflectate asupra comunității noastre. 
 
