--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,8 +1,9 @@
 ---
 play_number: 3
-title: 3. COMPORTAMENTUL AȘTEPTAT
+title: Comportmentul așteptat
 ---
-Îi încurajăm pe toți membrii acestei comunități să se poarte în mod excepțional  unul cu celălalt. Următoarele comportamente sunt așteptate și solicitate de la toți membrii comunității:
+Îi încurajăm pe toți membrii acestei comunități să se poarte în mod excepțional  unul cu celălalt. 
+Următoarele comportamente sunt așteptate și solicitate de la toți membrii comunității:
 
 - Implicați-vă într-un mod autentic și activ. Astfel contribuiți la valoarea, autenticitatea și longevitatea acestei comunități.
 - Exprimați-vă deschis și asumat opiniile. 
