--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,6 +1,6 @@
 ---
 play_number: 3
-title: Comportmentul așteptat
+title: Comportamentul așteptat
 ---
 Îi încurajăm pe toți membrii acestei comunități să se poarte în mod excepțional  unul cu celălalt. 
 Următoarele comportamente sunt așteptate și solicitate de la toți membrii comunității:
