--- a/_plays/08.md
+++ b/_plays/08.md
@@ -1,6 +1,6 @@
 --- 
 play_number: 8
-title: 8. DOMENIUL DE APLICARE
+title: Domeniul de aplicare
 ---
 Codul de conduită se aplică în mod egal tuturor participanților, incluzând membri fondatori, asociați, voluntari, parteneri, donatori, sponsori și alți invitați.
 
