--- a/_plays/07.md
+++ b/_plays/07.md
@@ -1,8 +1,10 @@
 ---
 play_number: 7
-title: 7. ABORDAREA PLÂNGERILOR
+title: 7. Abordarea plângerilor
 ---
-Dacă sunteți de părere că ați fost acuzat în mod incorect sau nedrept de încălcare a prezentului cod de conduită trebuie să informați coordonatorii comunității cu o descriere concisă a plângerii dvs. Plângerile vor fi tratată în conformitate cu principiile comunității CivicTech România și vor fi soluționate prin analizarea de particularități, context și istoric, după caz.
+Dacă sunteți de părere că ați fost acuzat în mod incorect sau nedrept de încălcare a prezentului cod de conduită trebuie să informați coordonatorii comunității cu o descriere concisă a plângerii dvs. 
+
+Plângerile vor fi tratată în conformitate cu principiile comunității CivicTech România și vor fi soluționate prin analizarea de particularități, context și istoric, după caz.
 
 
 
