--- a/_plays/04.md
+++ b/_plays/04.md
@@ -1,6 +1,6 @@
 ---
 play_number: 4
-title: 4. COMPORTAMENT INACCEPTABIL
+title: Comportament inacceptabil
 ---
 Pentru a încuraja toleranța, respectul și ospitalitatea în comunitatea noastră, ne asumăm angajamentul de a nu tolera discursuri sau acțiuni discriminatorii sau ofensatoare, inclusiv în ceea ce privește subiecte precum sexualitatea, rasa, naționalitatea, religia sau profesia. 
 
