--- a/_plays/06.md
+++ b/_plays/06.md
@@ -1,6 +1,6 @@
 ---
 play_number: 6
-title: 6. Ghidul de plângere
+title: Ghidul de raportare
 ---
 Dacă sunteți victimă sau martor la un comportament inacceptabil ce contravine principiilor comunității ori dacă aveți observații legate de acest subiect vă rugăm să atrageți atenția echipei de coordonatori ai comunității. 
 
