--- a/_plays/07.md
+++ b/_plays/07.md
@@ -1,6 +1,6 @@
 ---
 play_number: 7
-title: 7. Abordarea plângerilor
+title: Abordarea plângerilor
 ---
 Dacă sunteți de părere că ați fost acuzat în mod incorect sau nedrept de încălcare a prezentului cod de conduită trebuie să informați coordonatorii comunității cu o descriere concisă a plângerii dvs. 
 
