--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,6 +1,6 @@
 ---
 play_number: 3
-title: Comportamentul așteptat
+title: Comportament așteptat
 ---
 Îi încurajăm pe toți membrii acestei comunități să se poarte în mod excepțional  unul cu celălalt. 
 Următoarele comportamente sunt așteptate și solicitate de la toți membrii comunității:
@@ -8,7 +8,7 @@ Următoarele comportamente sunt așteptate și solicitate de la toți membrii co
 - Implicați-vă într-un mod autentic și activ. Astfel contribuiți la valoarea, autenticitatea și longevitatea acestei comunități.
 - Exprimați-vă deschis și asumat opiniile. 
 - Acordați atenție și respect în discursul și acțiunile personale. 
-- Încercați colaborarea înainte de conflict :) 
+- Încercați **colaborarea** înainte de conflict :) 
 - Evitați comportamente, exprimări și discursuri înjositoare, discriminatorii sau care pot hărțui. Toți participanții trebuie să se simtă în permanență în siguranță, fără să se teamă de nici o formă de atac, abuz sau hărțuire. 
 - Fiți atenți la context și la ceilalți participanți. Alertați coordonatorii comunității dacă observați o persoană agresivă, o situație delicată sau încălcări ale acestui Cod de conduită, chiar dacă acestea par a fi inconsecvente.
 - Amintiți-vă că mesajele comunității pot fi împărtășite cu publicul larg; Vă rugăm să fiți respectuoși față de susținătorii, partenerii, sponsorii și invitații acestei comunități.
