--- a/_plays/06.md
+++ b/_plays/06.md
@@ -1,10 +1,10 @@
 ---
 play_number: 6
-title: Ghidul de raportare
+title: Ghid de raportare
 ---
 Dacă sunteți victimă sau martor la un comportament inacceptabil ce contravine principiilor comunității ori dacă aveți observații legate de acest subiect vă rugăm să atrageți atenția echipei de coordonatori ai comunității. 
 
-Coordonatorii CivicTech România sunt disponibili în permanență pentru a ajuta membrii comunități să se simtă în siguranță. În contextul evenimentelor și comportamentelor necorespunzătoare ce țin de atacuri directe la persoană, coordonatorii vor acorda și asistență dedicată persoanei aflate într-o situație vulnerabilă.
+Coordonatorii **CivicTech România** sunt disponibili în permanență pentru a ajuta membrii comunități să se simtă în siguranță. În contextul evenimentelor și comportamentelor necorespunzătoare ce țin de atacuri directe la persoană, coordonatorii vor acorda și asistență dedicată persoanei aflate într-o situație vulnerabilă.
 
-Pentru a asigura un mediu respectuos și primitor nu ezitați să distribuiți codul de conduită către participanții la discuții oricând considerați oportun. 
+Pentru a asigura un mediu respectuos și primitor nu ezitați să distribuiți codul de conduită către participanții la discuții oricând considerați că e oportun. 
 
