--- a/_plays/05.md
+++ b/_plays/05.md
@@ -1,6 +1,6 @@
 ---
 play_number: 5
-title: Consecințele comportamentului necorespunzător
+title: Consecințe ale comportamentului necorespunzător
 ---
 Comportamentul inacceptabil din partea oricărui membru al comunității (inclusiv fondatori, asociați, parteneri, sponsori, invitați și cei cu autoritate decizională) nu va fi tolerat. 
 
