--- a/_plays/09.md
+++ b/_plays/09.md
@@ -1,5 +1,5 @@
 ---
 play_number: 9
-title: Contact
+title: Informații de Contact
 ---
 Dacă ați fost într-o situație în care Codul de conduită a fost încălcat vă rugăm să contactați urgent Echipa de Coordonatori a Comunității CivicTech România printr-o solicitare scrisă la adresa team[at]civictech.ro. Membrii echipei pot fi contactați și în mod individual.
