--- a/_plays/10.md
+++ b/_plays/10.md
@@ -1,6 +1,6 @@
 ---
 play_number: 10
-title: Atribuire
+title: Licență și Atribuire
 ---
 
 Acest document este în continuă actualizare și este dezvoltat folosind ca sursă de inspirație [Citizens of Conduct](http://citizencodeofconduct.org/), codul de conduită al [Free Software Foundation Europe](https://fsfe.org/) și [principiile CivicTech România](https://civictech.ro/cine-suntem#principii) care s-au dovedit eficiente în cadrul organizației.
