--- a/_plays/08.md
+++ b/_plays/08.md
@@ -4,6 +4,6 @@ title: Domeniu de aplicare
 ---
 Codul de conduită se aplică în mod egal tuturor participanților, incluzând membri fondatori, asociați, voluntari, parteneri, donatori, sponsori și alți invitați.
 
-Ne așteptăm ca toți participanții din comunitate să respecte acest Cod de Conduită în toate locurile de manifestarea a comunității, atât online cât și în persoană, precum și în toate comunicările individuale directe ce fac referire la activitățile și membrii acestei comunități.
+Ne așteptăm ca toți participanții din comunitate să respecte acest Cod de Conduită în toate locurile de manifestare a comunității, atât online cât și în persoană, precum și în toate comunicările individuale directe ce fac referire la activitățile și membrii acestei comunități.
 
 Acest cod de conduită și procedurile aferente se aplică, de asemenea, și comportamentului inacceptabil care apare în afara sferei activităților comunității, atunci când un astfel de comportament are potențialul de a afecta negativ siguranța și confortul membrilor comunității.
